--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -178,4 +178,9 @@ color:var(--color-131921)
 .small-banner{
   width: 49%;
 }
+/* Home wrapper 2 */
+.home-wrapper-2 {
+  background-color: var(--color-f5f5f7);
+}
+/* Home wrapper 2 ends*/
 /* Home Page Ends */
