--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -183,4 +183,88 @@ color:var(--color-131921)
   background-color: var(--color-f5f5f7);
 }
 /* Home wrapper 2 ends*/
+
+/* categories section */
+.categories {
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding:15px;
+}
+.categories > div {
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+}
+.categories > div > div {
+  width: 60%;
+}
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3),
+.categories>div:nth-child(4) {
+  border-bottom: 1px solid var(--color-ededed);
+}
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3){
+  border-right: 1px solid var(--color-ededed);
+}
+.categories>div:nth-child(5),
+.categories>div:nth-child(6),
+.categories>div:nth-child(7){
+  border-right: 1px solid var(--color-ededed);
+}
+/* categories section ends here */
+
 /* Home Page Ends */
+
+/* Blog-card */
+.blog-card {
+  background-color: white;
+  border-radius: 10px;
+}
+.blog-card img {
+  border-top-left-radius:10px;
+  border-top-right-radius: 10px;
+}
+.blog-content{
+  padding: 15px;
+}
+.blog-content p.date{
+font-size: 13px;
+line-height: 24px;
+text-transform: uppercase;
+letter-spacing:0;
+font-weight:400;
+color:var(--color-777777);
+padding:0;
+}
+.blog-content h5{
+  font-size: 18px;
+  color: var(--color-131921);
+}
+.blog-content p.desc {
+  font-size: 13px;
+  line-height: 22px;color:var(--color-777777);
+}
+/* Blog part ends here */
+
+/* Product Card */
+.product-card{
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+
+}
+.product-card .product-details h6{
+color:var(--color-bf4800);
+font-size: 13px;
+}
+.product-card .product-details h5{
+  font-size: 15px;
+  color: var(--color-1c1c1b);
+}
+.product-card .product-details p.price{
+foot-size: 16px;
+color: var(--color-1c1c1b);
+}
+/* Product Card Ends*/
